[gd_scene load_steps=17 format=3 uid="uid://cwpfckf0fl30q"]

[ext_resource type="Script" path="res://Combat/Scripts/battle_map.gd" id="1_nbqfk"]
[ext_resource type="Texture2D" uid="uid://clb8fd6s2bhnx" path="res://Tilesets/crateonStone.png" id="2_3sjpn"]
[ext_resource type="Texture2D" uid="uid://dtjf5kr6xduil" path="res://Tilesets/SettlementPathBase.png" id="3_y4wru"]
[ext_resource type="Script" path="res://Combat/Scripts/HighlightMap.gd" id="5_mf6xs"]
[ext_resource type="Texture2D" uid="uid://bguckoljhdrkh" path="res://Tilesets/tinyredDot.png" id="6_3pyvn"]
[ext_resource type="Texture2D" uid="uid://c15spoh8tyf2q" path="res://Tilesets/barrelonStone.png" id="6_27daa"]
[ext_resource type="Texture2D" uid="uid://cunualw136qme" path="res://Tilesets/tinyturkDot.png" id="7_bfi6l"]
[ext_resource type="Texture2D" uid="uid://cd1uafb065qbe" path="res://Sprites/AndrewImages/cityBackground.jpg" id="8_67l2n"]
[ext_resource type="AudioStream" uid="uid://c0vkdjtfvnyn1" path="res://Combat/Resources/sea_theme_1.wav" id="9_2kih8"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nfpvn"]
texture = ExtResource("2_3sjpn")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6mihe"]
texture = ExtResource("3_y4wru")
0:0/0 = 0
0:0/0/custom_data_0 = true
1:0/0 = 0
1:0/0/custom_data_0 = true
0:1/0 = 0
0:1/0/custom_data_0 = true
1:1/0 = 0
1:1/0/custom_data_0 = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bshkd"]
texture = ExtResource("6_27daa")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_hcfap"]
custom_data_layer_0/name = "walkable"
custom_data_layer_0/type = 1
sources/9 = SubResource("TileSetAtlasSource_bshkd")
sources/10 = SubResource("TileSetAtlasSource_nfpvn")
sources/11 = SubResource("TileSetAtlasSource_6mihe")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_q7wo7"]
texture = ExtResource("7_bfi6l")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_poqc1"]
texture = ExtResource("6_3pyvn")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_8ollj"]
sources/0 = SubResource("TileSetAtlasSource_q7wo7")
sources/2 = SubResource("TileSetAtlasSource_poqc1")

[node name="BattleMap" type="Node2D"]
position = Vector2(0, 1)
script = ExtResource("1_nbqfk")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_hcfap")
format = 2
layer_0/tile_data = PackedInt32Array(0, 11, 0, 1, 11, 0, 2, 11, 0, 3, 11, 0, 4, 11, 0, 5, 11, 0, 6, 11, 0, 7, 11, 0, 65543, 11, 0, 131079, 11, 0, 196615, 11, 0, 262151, 11, 0, 327687, 11, 0, 393223, 11, 0, 458759, 11, 0, 524295, 11, 0, 524294, 11, 0, 524293, 11, 0, 524292, 11, 0, 524291, 11, 0, 524290, 11, 0, 524289, 11, 0, 524288, 11, 0, 65536, 11, 0, 65537, 11, 0, 65538, 11, 0, 65539, 11, 0, 65540, 11, 0, 65541, 11, 0, 65542, 11, 0, 131078, 11, 0, 131077, 11, 0, 131076, 11, 0, 131075, 11, 0, 131074, 11, 0, 131073, 11, 0, 196609, 11, 0, 196608, 11, 0, 131072, 11, 0, 262144, 11, 0, 327680, 11, 0, 393216, 11, 0, 458752, 11, 0, 458753, 11, 0, 458754, 11, 0, 458755, 11, 0, 458756, 11, 0, 458757, 11, 0, 458758, 11, 0, 393222, 11, 0, 327686, 11, 0, 262150, 11, 0, 196614, 11, 0, 196613, 11, 0, 262149, 11, 0, 327685, 11, 0, 393221, 11, 0, 393220, 11, 0, 327684, 11, 0, 262148, 11, 0, 196612, 11, 0, 196611, 11, 0, 262147, 11, 0, 327683, 11, 0, 327682, 11, 0, 393218, 11, 0, 262146, 11, 0, 196610, 11, 0, 262145, 11, 0, 327681, 11, 0, 393217, 11, 0, 393219, 11, 0, 8, 11, 0, 65544, 11, 0, 131080, 11, 0, 196616, 11, 0, 262152, 11, 0, 327688, 11, 0, 393224, 11, 0, 458760, 11, 0, 524296, 11, 0)

[node name="HighlightMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_8ollj")
format = 2
script = ExtResource("5_mf6xs")

[node name="BattleCam" type="Camera2D" parent="."]
position = Vector2(-124, -29)
anchor_mode = 0
zoom = Vector2(1.5, 1.5)

[node name="Background" type="TextureRect" parent="."]
show_behind_parent = true
offset_left = -217.0
offset_top = -178.0
offset_right = 335.0
offset_bottom = 354.0
texture = ExtResource("8_67l2n")
expand_mode = 1

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
position = Vector2(72, 176)
stream = ExtResource("9_2kih8")
max_distance = 4000.0
